--- a/assets/css/site/contexts/widgets/_content-block.scss
+++ b/assets/css/site/contexts/widgets/_content-block.scss
@@ -22,6 +22,7 @@
 
   h2 {
     text-align: center;
+    margin-top: 0;
   }
 
   & > *:first-child, & > .width-wrapper > *:first-child {
